<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="Пропорции тела"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnstr"
        app:layout_constraintEnd_toEndOf="@+id/btnstr"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/btnstr" />

    <Button
        android:id="@+id/btnstr"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/black"
        android:text="Рассчитать"
        app:layout_constraintBottom_toTopOf="@+id/bClose"
        app:layout_constraintEnd_toEndOf="@+id/bClose"
        app:layout_constraintStart_toStartOf="@+id/bClose" />

    <Button
        android:id="@+id/bClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/black"
        android:onClick="onClickClose"
        android:text="Назад"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textShortMessage|text"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck,TextViewEdits,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t4" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t5" />

    <TextView
        android:id="@+id/t7"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t6" />

    <TextView
        android:id="@+id/t8"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t7" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/t1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neck"
            android:textSize="24sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biceps"
            android:textSize="20sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forearm"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breast"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waist"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pelvis"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hip"
            android:textSize="20sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>